--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "bookshelf": "^0.10.3",
     "bookshelf-camelcase": "^2.0.1",
@@ -47,6 +48,7 @@
     "helmet": "^3.6.1",
     "http-status-codes": "^1.1.6",
     "joi": "^11.0.1",
+    "jsonwebtoken": "^8.1.0",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
@@ -68,7 +70,6 @@
     "eslint": "^4.7.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
-    "husky": "^0.14.3",
     "istanbul": "1.1.0-alpha.1",
     "lint-staged": "^4.2.1",
     "mocha": "^3.4.2",
